--- a/rebar.config
+++ b/rebar.config
@@ -7,8 +7,7 @@
 
 {deps, [
     {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.1"}}},
-    {jiffy, "0.8.*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.8.5"}}}
+    {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.11.2"}}}
  ]}.
 
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
-
